# geospot

./: .gitignore  README.md  baseten_all_envs_job.py  baseten_cpu_precache_job.py  baseten_cpu_test_job.py  baseten_curriculum_job.py  baseten_hierarchical_job.py  baseten_telescoping_job.py  baseten_tinker_job.py  modal_tinker.py  pyproject.toml  shards.txt
geospot/: __init__.py  checkpoint_utils.py  cli_utils.py  completers.py  data_processing.py  datasets.py  db.py  envs.py  eval.py  hyperparam_utils.py  image_processing_utils.py  renderers.py  sft.py  test_telescoping.py  tokenizer_utils.py  train.py  train_curriculum.py  train_geohash_curriculum.py  train_hierarchical.py  train_rl.py  train_telescoping.py  types.py
geospot/cookbook/: README.md  __init__.py  train.py
geospot/data/: __init__.py  hf_utils.py  streaming.py
geospot/rl/: __init__.py  geo_dataset.py  geo_env.py  geo_reward.py  geohash_curriculum_env.py  hierarchical_geo_env.py  telescoping_geo_env.py  test_hierarchical.py  test_telescoping.py  types.py
geospot/utils/: __init__.py  file_utils.py  misc_utils.py  trace.py
viz/: .gitignore  Demo.tsx  README.md  index.tsx  package-lock.json  package.json  tailwind.config.ts
viz/app/: globals.css  layout.tsx  page.tsx
viz/components/: Dashboard.tsx  GeoGuessingRLViz.tsx  GeoPolicyPrediction.tsx  GeoRewardMap.tsx  LiveTrainingSection.tsx
viz/components/ui/: sidebar.tsx
viz/hooks/: useLiveTraining.ts  useReplayTraining.ts
viz/lib/: db.ts
viz/styles/: viz.css
wandb/: latest-run
wandb/run-20251215_003833-jxgpztu8/: run-jxgpztu8.wandb
wandb/run-20251215_012658-69z5amzc/: run-69z5amzc.wandb
(+18 files in other folders)
